--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TorrentWaver</title>
+    <title>TorrentServer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -94,7 +94,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>TorrentWaver</h1>
+        <h1>TorrentServer</h1>
         <div class="input-group">
             <input id="magnet-link" type="text" placeholder="Enter Magnet Link">
             <button id="download-button">Download</button>
